browsing page of products finished, mob programming team work

--- a/src/components/adminDetails/AdminDetails.css
+++ b/src/components/adminDetails/AdminDetails.css
@@ -12,3 +12,11 @@
 .go-back-btn{
    cursor: pointer;
 }
+
+.region-dropdown{
+   width: 80%;
+   display: flex; 
+   flex-direction: row;
+   justify-content: space-evenly;
+   font-size: 20px;
+}
