Project finished, met 10 user stories mob programming, John, Marcelo, Devon, Jose, Korey

--- a/src/components/admin/Admin.css
+++ b/src/components/admin/Admin.css
@@ -12,8 +12,8 @@
    margin: auto;
 }
 
-.table-one-one{
-   width: 70%;
+.table-one{
+   width: 80%;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    border-collapse: collapse;
 }
