--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -14,6 +14,7 @@
    align-items: flex-start;
    flex-wrap: wrap;
    margin: auto;
+   
 }
 
 .product-container-box{
@@ -27,6 +28,7 @@
    flex-wrap: wrap;
    align-items: center;
    cursor: pointer;
+   margin-bottom: 10rem;
    /* background-color: whitesmoke; */
 }
 
@@ -64,4 +66,8 @@
    height: 35px;
    font-size: 35px;
    font-weight: 800;
+}
+
+.product-container-box {
+   margin-bottom: 12rem;
 }
